--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,22 @@
 buildscript {
+    ext {
+        springBootVersion = '2.0.4.RELEASE'
+    }
     repositories {
-        mavenCentral()
+        jcenter()
+        maven { url "https://repo.spring.io/snapshot" }
+        maven { url "https://repo.spring.io/milestone" }
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.3.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.6'
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
+apply plugin: 'com.google.protobuf'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
@@ -22,15 +29,37 @@ repositories {
 }
 
 ext {
-    nettyVersion = '1111'
-    protobufVersion = '1111'
+    nettyVersion = '5.0.0.Alpha2'
+    protobufVersion = '3.6.1'
+}
+
+protobuf {
+    protoc {
+        path = 'C:\\Program Files\\protoc-3.5.1\\bin\\protoc.exe'
+    }
+    generatedFilesBaseDir = "$projectDir/src"
 }
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
 
+    compile 'org.projectlombok:lombok'
+
+    compile group: 'com.zaxxer', name: 'HikariCP'
+    compile group: 'org.postgresql', name: 'postgresql'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     implementation "io.netty:netty-all:${nettyVersion}"
     implementation "com.google.protobuf:protobuf-java:${protobufVersion}"
+
+    compile 'com.google.guava:guava:18.0'
+}
+
+sourceSets {
+    main {
+        proto {
+            srcDir 'dist-proto/src/proto'
+        }
+    }
 }
