--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,19 @@ buildscript {
     }
     repositories {
         jcenter()
+        maven { url 'https://plugins.gradle.org/m2/' }
         maven { url "https://repo.spring.io/snapshot" }
         maven { url "https://repo.spring.io/milestone" }
+        mavenCentral()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.6'
+        classpath 'com.bmuschko:gradle-docker-plugin:3.5.0'
     }
 }
 
+apply plugin: 'com.bmuschko.docker-remote-api'
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
@@ -25,8 +29,22 @@ group 'igc'
 version '1.0-SNAPSHOT'
 
 repositories {
+    jcenter()
     mavenCentral()
 }
+
+task copyDockerfile(type: Copy) {
+    from 'docker/Dockerfile', 'docker/entrypoint.sh'
+    into buildDir
+}
+
+import com.bmuschko.gradle.docker.tasks.image.*
+task buildDocker(type: DockerBuildImage, dependsOn: build) {
+    inputDir = buildDir
+    tag = 'igc/database:latest'
+}
+
+buildDocker.dependsOn copyDockerfile
 
 ext {
     nettyVersion = '5.0.0.Alpha2'
@@ -54,6 +72,7 @@ dependencies {
     implementation "com.google.protobuf:protobuf-java:${protobufVersion}"
 
     compile 'com.google.guava:guava:18.0'
+
 }
 
 sourceSets {
