--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,14 +1,28 @@
-FROM postgres:latest
+FROM ubuntu:latest
 MAINTAINER Igor Drozdov <drozdovigor1996@gmail.com>
-ENTRYPOINT ["service", "postgresql", "start"]
 
-RUN echo "deb http://ppa.launchpad.net/linuxuprising/java/ubuntu bionic main" | tee /etc/apt/sources.list.d/linuxuprising-java.list
-RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 73C3DB2A
+RUN apt-get update
+RUN apt-get install locales
+
+# Set the locale
+RUN locale-gen en_US.UTF-8
+ENV LANG en_US.UTF-8
+ENV LANGUAGE en_US:en
+ENV LC_ALL en_US.UTF-8
+
+RUN apt-get install -y software-properties-common
+
+RUN add-apt-repository ppa:linuxuprising/java
 RUN apt-get update
 RUN echo 'y' | apt-get install -y oracle-java10-installer
 RUN apt-get install oracle-java10-set-default
 
-COPY entrypoint.sh /usr/local/bin/
+RUN wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | \
+      apt-key add -
+RUN apt-get update
+RUN echo "Europe \ Moscow" | apt-get install -y postgresql
+
+COPY ./entrypoint.sh /usr/local/bin/entrypoint.sh
 COPY ./libs/dist-database-1.0-SNAPSHOT.jar /usr/share/server/database.jar
 
-ENTRYPOINT ["/usr/bin/java", "-jar", "/usr/share/server/database.jar"]
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
