--- a/build.gradle
+++ b/build.gradle
@@ -38,13 +38,14 @@ task copyDockerfile(type: Copy) {
     into buildDir
 }
 
-import com.bmuschko.gradle.docker.tasks.image.*
+import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
+
 task buildDocker(type: DockerBuildImage, dependsOn: build) {
     inputDir = buildDir
     tag = 'igc/database:latest'
 }
 
-buildDocker.dependsOn copyDockerfile
+buildDocker.dependsOn(copyDockerfile, build)
 
 ext {
     nettyVersion = '5.0.0.Alpha2'
@@ -60,11 +61,14 @@ protobuf {
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
-
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
     compile 'org.projectlombok:lombok'
 
     compile group: 'com.zaxxer', name: 'HikariCP'
     compile group: 'org.postgresql', name: 'postgresql'
+    compile group: 'org.springframework.data', name: 'spring-data-jpa'
+    compile group: 'org.hibernate', name: 'hibernate-core'
+    compile group: 'org.flywaydb', name: 'flyway-core', version: '5.1.4'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
@@ -73,6 +77,9 @@ dependencies {
 
     compile 'com.google.guava:guava:18.0'
 
+    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
+    compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0.1'
+    compile group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.0.1'
 }
 
 sourceSets {
